--- a/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
+++ b/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
@@ -30,29 +30,32 @@
            <div class="col">
                <label for="cep">CEP</label>
                <span hidden style="color: red;" #valido>  CEP INVALIDO!</span>
-               <input  ([ngModel])="cep" formControlName="cep" class="form-control" id="cep" type="text" name="cep">
+                <input  #cep  formControlName="cep" class="form-control" id="cep" type="text" name="cep">
+            </div>
+            <div class="cow">
+              <button style="margin-top:30px ;" class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscaCep(cep.value)">CONSULTAR CEP</button>
             </div>
         </div>
 
         <div class="row">
             <div class="col">
                 <label for="logradouro">Logradouro</label>
-                <input  formControlName="logradouro" class="form-control" id="logradouro" type="text" name="logradouro">
+                <input [(ngModel)]="endereco.logradouro" formControlName="logradouro" class="form-control" id="logradouro" type="text" name="logradouro">
             </div>
             <div class="col">
                 <label for="complemento">Complemento</label>
-                <input formControlName="complemento" class="form-control" id="complemento" type="text" name="complemento">
+                <input [(ngModel)]="endereco.complemento" formControlName="complemento" class="form-control" id="complemento" type="text" name="complemento">
             </div>
         </div>
 
         <div class="row">
             <div class="col">
                 <label for="cidade">Cidade</label>
-                <input formControlName="cidade" class="form-control" id="cidade" type="text" name="cidade">
+                <input  [(ngModel)]="endereco.localidade" formControlName="cidade" class="form-control" id="cidade" type="text" name="cidade">
             </div>
             <div class="col">
                 <label for="estado">Estado</label>
-                <input formControlName="estado" class="form-control" id="estado" type="text" name="estado">
+                <input [(ngModel)]="endereco.uf" formControlName="estado" class="form-control" id="estado" type="text" name="estado">
             </div>
         </div>
 
