--- a/src/app/components/funcionarios/detalhes-funcionario/detalhes-funcionario.component.html
+++ b/src/app/components/funcionarios/detalhes-funcionario/detalhes-funcionario.component.html
@@ -7,22 +7,22 @@
        <div class="row">
          <div class="col">
            <label  for="matricula" >Matricula</label>
-           <input  formControlName="matricula" class="form-control" type="text" id="matricula" name="matricula" readonly >
+           <input [ngModel]="funcionario?.matricula" formControlName="matricula" class="form-control" type="text" id="matricula" name="matricula" readonly >
          </div>
          <div class="col">
            <label for="nome">NOME</label>
-           <input formControlName="nome" class="form-control" id="nome" type="text" name="nome" >
+           <input [ngModel]="funcionario?.nome" formControlName="nome" class="form-control" id="nome" type="text" name="nome" >
          </div>
        </div>
 
        <div class="row">
            <div class="col">
                <label for="cpf">CPF</label>
-               <input formControlName="cpf" class="form-control" id="cpf" type="text" name="cpf">
+               <input [ngModel]="funcionario?.cpf" formControlName="cpf" class="form-control" id="cpf" type="text" name="cpf">
            </div>
            <div class="col">
                <label for="nascimento">Data Nascimento</label>
-               <input formControlName="nascimento" class="form-control" id="nascimento" type="date" name="nascimento">
+               <input [ngModel]="funcionario?.nascimento" formControlName="nascimento" class="form-control" id="nascimento" type="date" name="nascimento">
            </div>
        </div>
 
@@ -30,54 +30,54 @@
           <div class="col">
               <label for="cep">CEP</label>
               <span hidden style="color: red;" #valido>  CEP INVALIDO!</span>
-              <input formControlName="cep" class="form-control" id="cep" type="text" name="cep">
+              <input [ngModel]="funcionario?.cep" formControlName="cep" class="form-control" id="cep" type="text" name="cep">
            </div>
        </div>
 
        <div class="row">
            <div class="col">
                <label for="logradouro">Logradouro</label>
-               <input  formControlName="logradouro" class="form-control" id="logradouro" type="text" name="logradouro">
+               <input [ngModel]="funcionario?.logradouro" formControlName="logradouro" class="form-control" id="logradouro" type="text" name="logradouro">
            </div>
            <div class="col">
                <label for="complemento">Complemento</label>
-               <input formControlName="complemento" class="form-control" id="complemento" type="text" name="complemento">
+               <input [ngModel]="funcionario?.complemento" formControlName="complemento" class="form-control" id="complemento" type="text" name="complemento">
            </div>
        </div>
 
        <div class="row">
            <div class="col">
                <label for="cidade">Cidade</label>
-               <input formControlName="cidade" class="form-control" id="cidade" type="text" name="cidade">
+               <input [ngModel]="funcionario?.cidade" formControlName="cidade" class="form-control" id="cidade" type="text" name="cidade">
            </div>
            <div class="col">
                <label for="estado">Estado</label>
-               <input formControlName="estado" class="form-control" id="estado" type="text" name="estado">
+               <input [ngModel]="funcionario?.estado" formControlName="estado" class="form-control" id="estado" type="text" name="estado">
            </div>
        </div>
 
        <div class="row">
            <div class="col">
                <label for="telefone">Telefone</label>
-               <input formControlName="telefone" class="form-control" id="telefone" type="text" name="telefone" placeholder="(99)99999-9999">
+               <input [ngModel]="funcionario?.telefone" formControlName="telefone" class="form-control" id="telefone" type="text" name="telefone" placeholder="(99)99999-9999">
            </div>
            <div class="col">
                <label for="email">E-mail</label>
-               <input formControlName="email" class="form-control" id="email" type="text" name="email" placeholder="nome@mail.com">
+               <input [ngModel]="funcionario?.email" formControlName="email" class="form-control" id="email" type="text" name="email" placeholder="nome@mail.com">
            </div>
        </div>
 
        <div class="row">
            <div class="col">
                <Label for="senha">Senha de Acesso</Label>
-               <input formControlName="senha" class="form-control" id="senha" type="password" name="senha">
+               <input [ngModel]="funcionario?.senha" formControlName="senha" class="form-control" id="senha" type="password" name="senha">
            </div>
        </div>
     
 
       </div>
 
-       <button [disabled]="formulario.invalid" class="btn btn-primary" type="submit">Gravar
+       <button [disabled]="formulario.invalid" class="btn btn-primary" type="submit">Alterar
          <i class="material-icons right">check</i>
        </button>
 
