--- a/src/app/components/cadastrar-ticket/cadastrar-ticket.component.html
+++ b/src/app/components/cadastrar-ticket/cadastrar-ticket.component.html
@@ -15,6 +15,9 @@
                 <label for="placa">Placa</label>
                 <input formControlName="placa" class="form-control"  id="placa" type="text"  name="placa" >
               </div>
+              <div class="col">
+                <button style="margin-top:30px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Consultar</button>
+              </div>
             </div>
         </div>
 
