--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -1,5 +1,5 @@
 <section id="meio">
-    <h3 style="color: white;">Menu Cadastros</h3>
+    <h3 style="color: white;">Menu Ticket</h3>
     <br>
     <button [routerLink]="''" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
       <br><br>
