--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="row">
-        <button routerLink="tickets" class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <button routerLink="cadastros" class="btn waves-effect waves-light" type="submit" name="action">Submit
             <i class="material-icons right">send</i>
           </button>
     </div>
