--- a/src/app/components/clientes/cad-cliente/cad-cliente.component.html
+++ b/src/app/components/clientes/cad-cliente/cad-cliente.component.html
@@ -6,20 +6,17 @@
 
         <div class="row">
           <div class="col">
-            <label  for="codigo" >Código</label>
-            <input  formControlName="codigo" class="form-control" type="text" id="codigo" name="codigo"  >
-          </div>
-          <div class="col">
             <label for="nome">Nome</label>
             <input formControlName="nome" class="form-control" id="nome" type="text" name="nome" >
           </div>
         </div>
 
         <div class="row">
-            <div class="col">
-                <label for="cpf">CPF</label>
-                <input formControlName="cpf" class="form-control" id="cpf" type="text" name="cpf">
+            <div class="col s">
+                <label for="cgc">CPF</label>
+                <input formControlName="cgc" class="form-control" id="cgc" type="text" name="cgc">
             </div>
+
             <div class="col">
                 <label for="nascimento">Data Nascimento</label>
                 <input formControlName="nascimento" class="form-control" id="nascimento" type="date" name="nascimento">
@@ -41,14 +38,6 @@
             <div class="col">
                 <label for="email">E-mail</label>
                 <input formControlName="email" class="form-control" id="email" type="text" name="email" placeholder="nome@mail.com">
-            </div>
-        </div>
-
-        <H3 style="color: white ; text-align: left;">Cadastrar Veículo</H3>
-        <div class="row">
-            <div class="col">
-                <Label for="placa">Placa</Label>
-                <input formControlName="placa" class="form-control" id="placa" type="password" name="placa">
             </div>
         </div>
 
