--- a/src/app/components/list-ticket/list-tickets.component.css
+++ b/src/app/components/list-ticket/list-tickets.component.css
@@ -1,3 +1,17 @@
-th {
+td{
+    background-color:rgba(54,54,54);    
+}
+
+tr{
+    background-color:     rgba(54,54,54);
     color: white;
 }
+
+table{
+  text-align:left;
+  margin-left: 15%;
+  width: 50%;
+}
+
+
+
