--- a/src/app/components/list-ticket/list-tickets.component.html
+++ b/src/app/components/list-ticket/list-tickets.component.html
@@ -16,7 +16,7 @@
             <tbody>
               <tr  *ngFor="let ticket of tickets">
                 <td>{{ ticket.placa }}</td>
-                <td>{{ ticket.horaentrada }}</td>
+                <td>{{ ticket.horaEntrada }}</td>
                 <td><button [routerLink]="'/encerrar'"class="btn waves-effect waves-light" type="submit" name="action"><i  class="material-icons">clear</i></button></td>
               </tr> 
 
