--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -1,7 +1,6 @@
 <section id="meio">
     <h3 style="color: white;">Menu Ticket</h3>
     <br>
-    <button [routerLink]="''" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
       <br><br>
       <div class="form-group">
       <div class="row">
@@ -15,7 +14,7 @@
           <div class="col"> 
             <div class="card">
               <div class="card-action white-text">
-                <a routerLink="/detalhesticket">Consultar Ticket</a>
+                <a routerLink="/listar">Consultar Ticket</a>
               </div>
             </div>
           </div>
