--- a/src/app/components/list-ticket/list-tickets.component.html
+++ b/src/app/components/list-ticket/list-tickets.component.html
@@ -2,7 +2,7 @@
 <section id="meio">
   
     <H4 style="color: white; text-align: left;">Lista de Tickets</H4>
-    <button [routerLink]="'/cadastros'" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
+    <button [routerLink]="'/tickets'" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
     <br><br>
     <section>
         <table>
