--- a/src/app/components/clientes/list-clientes/list-clientes.component.html
+++ b/src/app/components/clientes/list-clientes/list-clientes.component.html
@@ -8,8 +8,9 @@
         <table>
             <thead>
               <tr>
-                  <th>CGC</th>
+                  <th>CPF</th>
                   <th>NOME</th>
+                  <th> </th>
                   <th><a id="add"  [routerLink]="['/CadCliente']" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a></th>
               </tr>
             </thead>
@@ -17,7 +18,8 @@
               <tr *ngFor="let cliente of clientes">
                 <td>{{ cliente.cgc }}</td>
                 <td>{{ cliente.nome }}</td>
-                <td><a [routerLink]="['/DetalhesCliente', cliente.id]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
+                  <td><a [routerLink]="['/DetalhesCliente', cliente.id]" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
+                  <td><a [routerLink]="['/veiculos']" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">drive_eta</i></a>
                 </td>
               </tr> 
             </tbody>
