--- a/src/app/components/veiculos/list-veiculo/list-veiculo.component.html
+++ b/src/app/components/veiculos/list-veiculo/list-veiculo.component.html
@@ -5,10 +5,14 @@
       <div class="form-group">
 
         <div class="row">
-          <div class="col">
+          <div class="col"> 
+         
+          </div>
+
+          <!-- <div class="col">
             <label  for="matricula" >Tipo Veículo</label>
             <input  formControlName="tipo" class="form-control" type="text" id="tipo" name="tipo">
-          </div>
+          </div> -->
           <div class="col">
             <label for="nome">Placa Veículo</label>
             <input formControlName="placa" class="form-control" id="placa" type="text" name="placa">
