--- a/src/app/components/veiculos/list-veiculo/list-veiculo.component.html
+++ b/src/app/components/veiculos/list-veiculo/list-veiculo.component.html
@@ -5,8 +5,14 @@
       <div class="form-group">
 
         <div class="row">
-          <div class="col"> 
-         
+          <div class="col">
+            <label  for="matricula" >Tipo Veículo</label>
+            <div class="custom-radio"> 
+              <input type="radio" id="carro" name="tipoVeiculo" value="Carro">
+              <label for="carro">Carro</label>
+              <input type="radio" id="moto" name="tipoVeiculo" value="Moto">
+              <label for="moto">Moto</label>
+            </div>
           </div>
 
           <!-- <div class="col">
