caixa, ja que ngm faz

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -8,6 +8,7 @@
     <ul id="nav-mobile" class="left ">
       <li routerLinkActive="active"><a routerLink="cadastros">MENU</a></li>
       <li routerLinkActive="active"><a routerLink="tickets" >TICKETs</a></li>
+      <li routerLinkActive="active"><a routerLink="tickets" >CAIXA</a></li>
     </ul>
   </div>
 </nav>
