--- a/src/app/componentes/clientes/list-cliente/list-cliente.component.html
+++ b/src/app/componentes/clientes/list-cliente/list-cliente.component.html
@@ -12,7 +12,7 @@
             <thead>
               <tr>
                   <th>CPF</th>
-                  <th>NOME</th>
+                  <th>Nome</th>
                   <th> </th>
                   <th><button routerLink="/novocliente" type="button" class="btn btn-primary">Adicionar</button></th>
               </tr>
