--- a/src/app/componentes/empresa/cad-empresa/cad-empresa.component.html
+++ b/src/app/componentes/empresa/cad-empresa/cad-empresa.component.html
@@ -19,13 +19,13 @@
         </div>
         <div class="row">
           <div class="col ">
-            <label for="endereco">Endereco</label>
+            <label for="endereco">Endereço</label>
             <input [ngModel]="empresa?.endereco" formControlName="endereco" class="form-control"  id="endereco" type="text"  name="endereco" >
           </div>
         </div>
         <div class="row">
           <div class="col">
-            <label for="email">Email</label> 
+            <label for="email">E-mail</label> 
             <input [ngModel]="empresa?.email" style="text-transform: lowercase;" formControlName="email" class="form-control"  id="email" type="email"   name="email">  
           </div>
           <div class="col ">
