--- a/src/app/componentes/funcionario/cad-funcionario/cad-funcionario.component.html
+++ b/src/app/componentes/funcionario/cad-funcionario/cad-funcionario.component.html
@@ -1,7 +1,7 @@
 <section id="meio" >
    
-    <H2>Funcionarios</H2>
-    <div class="container-title"> Cadastrar Novo Funcionario </div>
+    <H2>Funcionários</H2>
+    <div class="container-title"> Cadastrar Novo Funcionário </div>
     <br>
 
   <div id="myform">
@@ -10,11 +10,11 @@
 
         <div class="row">
           <div class="col-sm-2">
-            <label  for="matricula" >Matricula</label>
+            <label  for="matricula" >Matrícula</label>
             <input value="{{ProximaMatricula}}" formControlName="matricula" class="form-control" type="text" id="matricula" name="matricula" readonly >
           </div>
           <div class="col-sm-8">
-            <label for="nome">NOME</label>
+            <label for="nome">Nome</label>
             <input formControlName="nome" class="form-control" id="nome" type="text" name="nome" >
           </div>
         </div>
@@ -33,7 +33,7 @@
         <div class="row">
            <div class="col-sm-2">
                <label for="cep">CEP</label>
-               <span hidden style="color: red;" #valido>  CEP INVALIDO!</span>
+               <span hidden style="color: red;" #valido>  CEP INVÁLIDO!</span>
                 <input #cep  formControlName="cep" class="form-control" id="cep" type="text" name="cep">
             </div>
             <div class="cow">
