--- a/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
+++ b/src/app/componentes/funcionario/list-funcionario/list-funcionario.component.html
@@ -1,16 +1,16 @@
 
 <section id="meio">
   
-    <H2>Funcionarios</H2>
-    <div class="container-title"> Listagem de Funcionarios Cadastrados </div>
+    <H2>Funcionários</H2>
+    <div class="container-title"> Listagem de Funcionários Cadastrados </div>
     <br>
     
     <section class="lista">
         <table>
             <thead>
               <tr>
-                  <th>MATRICULA</th>
-                  <th>NOME</th>
+                  <th>Matrícula</th>
+                  <th>Nome</th>
                   <th><button [routerLink]="'/novofuncionario'" class="btn btn-primary" type="submit" name="action">Adicionar</button></th>
               </tr>
             </thead>
