--- a/src/app/componentes/template/template.component.html
+++ b/src/app/componentes/template/template.component.html
@@ -6,7 +6,7 @@
       <p>HOME</p>
     </div>
     <div class="sidebar-content-option">
-      <i class="large material-icons">home</i> <a routerLink="home">Inicio</a>  
+      <i class="large material-icons">home</i> <a routerLink="home">Início</a>  
     </div>
 
     <div class="sidebar-content">
@@ -23,7 +23,7 @@
       <i class="large material-icons">people_alt</i> <a routerLink="clientes">Clientes</a>
     </div>
     <div class="sidebar-content-option">
-      <i class="large material-icons">engineering</i> <a routerLink="funcionarios">Funcionarios</a>
+      <i class="large material-icons">engineering</i> <a routerLink="funcionarios">Funcionários</a>
     </div>
     <div class="sidebar-content-option">
       <i class="large material-icons">apartment</i> <a routerLink="empresa">Empresa</a>
