--- a/src/app/componentes/ticket/encerra-ticket/encerra-ticket.component.html
+++ b/src/app/componentes/ticket/encerra-ticket/encerra-ticket.component.html
@@ -9,7 +9,7 @@
         <div class="form-group">
           <div class="row">
             <div class="col">
-               <label  for="Ticket" >Numero do Ticket</label>
+               <label  for="Ticket" >Número do Ticket</label>
                <input  [ngModel]="ticket?.id" formControlName="id" class="form-control" id="Ticket" type="text "  name="ticket" readonly >
               </div>
           </div>
@@ -21,7 +21,7 @@
             </div>
             <div class="row">
               <div class="col">
-                <label for="Permanencia">Tempo de Permanencia </label> 
+                <label for="Permanencia">Tempo de Permanência </label> 
                 <input formControlName="permanencia" class="form-control"  id="veiculo" type="text"   name="permanencia">  
               </div>
             </div>
