--- a/src/app/componentes/ticket/list-ticket/list-ticket.component.html
+++ b/src/app/componentes/ticket/list-ticket/list-ticket.component.html
@@ -12,8 +12,8 @@
         <table>
             <thead>
               <tr>
-                  <th>PLACA</th>
-                  <th>HORARIO ENTRADA</th>
+                  <th>Placa</th>
+                  <th>Horário Entrada</th>
                   <th></th>
               </tr>
             </thead>
