--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <H2>Home</H2>
-<div class="container-title"> Bem Vindo! </div>
+<div class="container-title"> Bem vindo! </div>
 <br>
-    <span >Seja bem vindo ao seu sistema de gerenciamento pessoal!</span>
+    <span >Seja bem vindo ao seu sistema de gerenciamento de estacionamento!</span>
