--- a/src/app/componentes/template/template.component.html
+++ b/src/app/componentes/template/template.component.html
@@ -28,6 +28,12 @@
     <div class="sidebar-content-option">
       <i class="large material-icons">apartment</i> <a routerLink="empresa">Empresa</a>
     </div>
+    <div class="sidebar-content">
+      <p>RELATÓRIOS</p>
+    </div>
+    <div class="sidebar-content-option">
+      <i class="large material-icons">receipt</i> <a routerLink="empresa">Entradas do Dia</a>
+    </div>
 
 </div>
 <main>
