--- a/src/app/componentes/ticket/cad-ticket/cad-ticket.component.html
+++ b/src/app/componentes/ticket/cad-ticket/cad-ticket.component.html
@@ -1,7 +1,7 @@
 <section id="meio" >
     
     <H2>Tickets</H2>
-    <div class="container-title"> Abrir novo ticket</div>
+    <div id = titulo class="container-title"> Abrir Novo Ticket</div>
     <br>
 
     <div id="myform">
