--- a/src/app/componentes/template/template.component.html
+++ b/src/app/componentes/template/template.component.html
@@ -32,7 +32,7 @@
       <p>RELATÓRIOS</p>
     </div>
     <div class="sidebar-content-option">
-      <i class="large material-icons">receipt</i> <a routerLink="empresa">Entradas do Dia</a>
+      <i class="large material-icons">receipt</i> <a routerLink="entradas">Entradas do Dia</a>
     </div>
 
 </div>
