--- a/src/app/componentes/relatorios/entrada-dia/entrada-dia.component.html
+++ b/src/app/componentes/relatorios/entrada-dia/entrada-dia.component.html
@@ -27,10 +27,12 @@
               </tr> 
 
             </tbody>
-            <tbody>
-                
-            </tbody>
+            <div class="total">
+                <tr>TOTAL:</tr>
+            </div>
           </table>
+         
+          
           
     </section>
 
