--- a/src/app/componentes/clientes/cad-cliente/cad-cliente.component.html
+++ b/src/app/componentes/clientes/cad-cliente/cad-cliente.component.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col s">
                     <label for="cgc">CPF</label>
-                    <input formControlName="cgc" class="form-control" id="cgc" type="text" name="cgc">
+                    <input formControlName="cgc" class="form-control" id="cgc" type="text" name="cgc" mask="CPF_CNPJ">
                 </div>
 
                 <div class="col">
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col">
                     <label for="telefone">Telefone</label>
-                    <input formControlName="telefone" class="form-control" id="telefone" type="text" name="telefone" placeholder="(99)99999-9999">
+                    <input formControlName="telefone" class="form-control" id="telefone" type="text" name="telefone" placeholder="(99)99999-9999" mask="(00) 00000-0000 || (00) 0000-0000">
                 </div>
                 <div class="col">
                     <label for="email">E-mail</label>
