--- a/src/app/componentes/funcionario/cad-funcionario/cad-funcionario.component.html
+++ b/src/app/componentes/funcionario/cad-funcionario/cad-funcionario.component.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-sm-2">
                 <label for="cpf">CPF</label>
-                <input formControlName="cpf" class="form-control" id="cpf" type="text" name="cpf">
+                <input formControlName="cpf" class="form-control" id="cpf" type="text" name="cpf" mask="CPF_CNPJ">
             </div>
             <div class="col-sm-3">
                 <label for="nascimento">Data Nascimento</label>
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-sm-2">
                 <label for="telefone">Telefone</label>
-                <input formControlName="telefone" class="form-control" id="telefone" type="text" name="telefone" placeholder="(99)99999-9999">
+                <input formControlName="telefone" class="form-control" id="telefone" type="text" name="telefone" placeholder="(99)99999-9999" mask="(00) 00000-0000 || (00) 0000-0000">
             </div>
             <div class="col-sm-3">
                 <label for="email">E-mail</label>
