--- a/src/app/componentes/ticket/cad-ticket/cad-ticket.component.html
+++ b/src/app/componentes/ticket/cad-ticket/cad-ticket.component.html
@@ -29,11 +29,11 @@
 
             </div>
         </div>
-        <div style="display: inline-block; margin-top: 10px; margin-left:-5px;">
+        <div style="display: inline-block; margin-top: 10px; margin-left:10px;">
           <button class="btn btn-success" type="submit" (click)="gravarTicket()">Gravar
           </button>
 
-          <button  [routerLink]="'/tickets'" style="background-color: rgb(224, 59, 59); margin-left: 5px;" class="btn btn-danger">Cancelar
+          <button  [routerLink]="'/tickets'" style="margin-left: 5px;" class="btn btn-danger">Cancelar
           </button>
       </div>
     </div>
