--- a/src/app/componentes/ticket/list-ticket/list-ticket.component.html
+++ b/src/app/componentes/ticket/list-ticket/list-ticket.component.html
@@ -21,7 +21,9 @@
               <tr  *ngFor="let ticket of tickets">
                 <td>{{ ticket.placa }}</td>
                 <td>{{ ticket.horaEntrada }}</td>
-                <td><button id="encerrar" [routerLink]="['/encerrar', ticket.id]" class="btn btn-primary" type="button" name="action">Encerrar</button></td>
+                <td >
+                  <button *ngIf="ticket?.situacao == 9" id="encerrar" [routerLink]="['/encerrar', ticket.id]" class="btn btn-danger" disabled type="button" name="action">Encerrado</button>
+                  <button *ngIf="ticket?.situacao != 9" id="encerrar" [routerLink]="['/encerrar', ticket.id]" class="btn btn-primary" type="button" name="action">Encerrar</button></td>
               </tr> 
 
             </tbody>
